welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:16: error: ';' expected but 'else' found.
  } else{avance()}
    ^ColumnByColumn:20: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:23: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:26: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:29: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:32: error: Unmatched closing brace '}' ignored here
}
^